# gr-detector

./: CMakeLists.txt  MANIFEST.md
cmake/Modules/: detectorConfig.cmake
docs/: README.detector
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  detector_single_lag_autocorrelation.grc
include/detector/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_detector.cc  qa_detector.h  test_detector.cc
python/: CMakeLists.txt  __init__.py
swig/: CMakeLists.txt  detector_swig.i
